# Coursework5

./: .gitignore  README.md  main.py  pyproject.toml
data/: input_example.txt
src/: class_dbmanager.py  utils.py
tests/: conftest.py  test_class_dbmanager.py  test_utils.py
